# research-navigator-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  SKILL.md  SUBMISSION.md  TODO.md  pyproject.toml
.github/: pull_request_template.md
.streamlit/: config.toml
app/: __init__.py  adk_tools.py  agent.py  mcp_server.py
configs/: default.yaml
docs/: agent_technology_story.md  antigravity_demo_notes.md  capstone_evaluation_mapping.md  coverage_report.md  demo_script.md  dependency_audit.md  judge_walkthrough.md  kaggle_submission_package.md  kaggle_video_scenario_4min.md  kaggle_video_script.md  kaggle_writeup_paste_ready.md  mcp_server.md  reproducibility.md  security_review.md  system_card.md
evals/: golden_cases.json
scripts/: __init__.py  build_graph.py  check_no_secrets.py  coverage_report.py  dependency_audit.py  discover_gaps.py  evaluate_outputs.py  export_agent_trace.py  generate_sample_outputs.py  ingest_papers.py  preflight.py  project_stats.py  run_demo.py  run_golden_evals.py  run_mcp_server.py  validate_submission.py
specs/: behavior_scenarios.md  evaluation_plan.md  policies.yaml  project_spec.md  safety_policy.md
tests/: test_adk_tools.py  test_agent_trace.py  test_build_graph.py  test_check_no_secrets.py  test_config_tools.py  test_corpus_setup.py  test_coverage_report.py  test_dependency_audit.py  test_evaluation_tools.py  test_extraction_tools.py  test_gap_tools.py  test_generate_sample_outputs.py  test_graph_tools.py  test_ingest_papers.py  test_logging_tools.py  test_mcp_server.py  test_pdf_tools.py  test_policy_tools.py  (+11 more)
(+43 files in other folders)
